--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
     "urls": [
         ["walter_modem/__init__.py", "github:QuickSpot/walter-micropython/walter_modem/__init__.py"],
         ["walter_modem/core.py", "github:QuickSpot/walter-micropython/walter_modem/core.py"],
-        ["walter_modem/enums.py", "github:QuickSpot/walter-micropython/walter_modem/enums.py"],
+        ["walter_modem/coreEnums.py", "github:QuickSpot/walter-micropython/walter_modem/coreEnums.py"],
+        ["walter_modem/coreStructs.py", "github:QuickSpot/walter-micropython/walter_modem/coreStructs.py"],
         ["walter_modem/modem.py", "github:QuickSpot/walter-micropython/walter_modem/modem.py"],
         ["walter_modem/queue.py", "github:QuickSpot/walter-micropython/walter_modem/queue.py"],
-        ["walter_modem/structs.py", "github:QuickSpot/walter-micropython/walter_modem/structs.py"],
         ["walter_modem/utils.py", "github:QuickSpot/walter-micropython/walter_modem/utils.py"],
-        ["walter_modem/mixins/__init__.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/__init__.py"],
+        ["walter_modem/mixins/_default_pdp.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/_default_pdp.py"],
+        ["walter_modem/mixins/_default_power_saving.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/_default_power_saving.py"],
+        ["walter_modem/mixins/_default_sim_network.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/_default_sim_network.py"],
         ["walter_modem/mixins/coap.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/coap.py"],
         ["walter_modem/mixins/gnss.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/gnss.py"],
         ["walter_modem/mixins/http.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/http.py"],
         ["walter_modem/mixins/mqtt.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/mqtt.py"],
-        ["walter_modem/mixins/pdp.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/pdp.py"],
-        ["walter_modem/mixins/sim_network.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/sim_network.py"],
-        ["walter_modem/mixins/sleep.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/sleep.py"],
         ["walter_modem/mixins/socket.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/socket.py"],
         ["walter_modem/mixins/tls_certs.py", "github:QuickSpot/walter-micropython/walter_modem/mixins/tls_certs.py"]
     ],
